# VoidClip

./: CMakeLists.txt
src/: HotkeyManager.cpp  HotkeyManager.h  ReplayBuffer.cpp  ReplayBuffer.h  Settings.cpp  Settings.h  main.cpp
